# system_design_task_04

./: CMakeLists.txt  Dockerfile  README.md  data.js  docker-compose.yaml  openapi.yaml  queries.js  schema_design.md  validation.js
configs/: config.yaml  config_vars.yaml  dynamic_config_fallback.json
mongo/init/: 01-validation.js  02-seed.js
src/: main.cpp
src/domain/: json.cpp  json.hpp  models.hpp
src/handlers/: auth_handlers.cpp  auth_handlers.hpp  base_handler.hpp  exercise_handlers.cpp  exercise_handlers.hpp  recipe_handlers.hpp  user_handlers.cpp  user_handlers.hpp  workout_handlers.cpp  workout_handlers.hpp
src/middlewares/: auth_middleware.cpp  auth_middleware.hpp
src/storage/: fitness_storage.cpp  fitness_storage.hpp
src/utils/: http_utils.cpp  http_utils.hpp  string_utils.cpp  string_utils.hpp
tests/: conftest.py  test_api.py
